# alloplace2

./: .gitmodules  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: main.yml
src/: main.c
